--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.18.0",
     "vee-validate": "^2.1.0-beta.7",
     "vue": "^2.5.16",
+    "vue-loader": "^15.2.6",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
@@ -23,14 +24,14 @@
     "@vue/cli-service": "^3.0.0-rc.10",
     "@vue/test-utils": "^1.0.0-beta.20",
     "babel-core": "7.0.0-bridge.0",
-    "babel-jest": "^23.0.1",
+    "babel-jest": "^23.4.2",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.0.1",
+    "vue-jest": "^2.6.0",
     "vue-template-compiler": "^2.5.16"
   },
   "babel": {
     "presets": [
-      "vue",
       "@vue/app"
     ]
   }
